// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadList matches the last snapshot 1`] = `
<div
  className="thread-list"
>
  <div
    className="header"
  >
    <Link
      replace={false}
      to="/t/new"
    >
      <Button
        className="new-message"
        label="New Message"
      />
    </Link>
    <div
      className="header-text hdr-headline"
    >
      Messages
    </div>
  </div>
  <div
    className="search"
  >
    <TextInput
      onChange={[Function]}
      placeholder="Search for people..."
    />
  </div>
  <ul
    className="list"
    id="thread-list-list"
  >
    <div
      className="no-conversations bdy-lt-lg"
    >
      You have no active conversations
    </div>
  </ul>
  <ScrollListener
    elementId="thread-list-list"
  />
</div>
`;

exports[`ThreadListItem matches the last snapshot 1`] = `
<li
  className="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
          "la.png",
        ]
      }
    />
    <div
      className="li-center-content"
    >
      <ThreadNames
        names="Jo and La"
      />
      <div
        className="thread-message-text bdy-lt-sm"
      />
    </div>
    <div
      className="li-right-content"
    >
      <div
        className="message-time timestamp"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with 2 participants 1`] = `
<li
  className="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "jo.png",
        ]
      }
    />
    <div
      className="li-center-content"
    >
      <ThreadNames
        names="Jo"
      />
      <div
        className="thread-message-text bdy-lt-sm"
      />
    </div>
    <div
      className="li-right-content"
    >
      <div
        className="message-time timestamp"
      />
    </div>
  </Link>
</li>
`;

exports[`ThreadListItem matches the last snapshot with just you 1`] = `
<li
  className="list-item"
>
  <Link
    replace={false}
    to="/t/undefined"
  >
    <ThreadAvatars
      avatarUrls={
        Array [
          "ra.png",
        ]
      }
    />
    <div
      className="li-center-content"
    >
      <ThreadNames
        names="You"
      />
      <div
        className="thread-message-text bdy-lt-sm"
      />
    </div>
    <div
      className="li-right-content"
    >
      <div
        className="message-time timestamp"
      />
    </div>
  </Link>
</li>
`;
